force-app/main/default/objects/Manufacturer_Payment__c/Manufacturer_Payment__c.object-meta.xml
<CustomObject>
    <label>Manufacturer Payment</label>
    <nameField>
        <displayFormat>MFP-{0000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturer Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>