force-app/main/default/objects/Manufacturer_Payment__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <description>How much paid in this instalment. Required: ✓. Must be greater than 0.</description>
    <label>Amount Paid</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>