force-app/main/default/objects/Manufacturer_Payment__c/fields/Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Paid_By__c</fullName>
    <label>Paid By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team_Members</valueSetName>
    </valueSet>
</CustomField>