force-app/main/default/objects/Manufacturer_Payment__c/fields/Purchase__c.field-meta.xml
<CustomField>
    <fullName>Purchase__c</fullName>
    <description>Must be Master-Detail so Roll-Up Summary works on Purchase. Label: &quot;Purchase&quot;. Required automatically.</description>
    <label>Purchase</label>
    <referenceTo>Purchase__c</referenceTo>
    <relationshipLabel>Manufacturer Payments</relationshipLabel>
    <relationshipName>Manufacturer_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>