force-app/main/default/objects/Manufacturer_Payment__c/fields/Reference_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reference_Notes__c</fullName>
    <description>Cheque number, UTR number, or any reference for this payment.</description>
    <label>Reference / Notes</label>
    <type>TextArea</type>
</CustomField>